// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/nuget/extract extractPackageFile() extracts all dependencies 1`] = `
[
  {
    "currentValue": "1.0.0",
    "datasource": "nuget",
    "depName": "My.Package",
    "depType": "nuget",
  },
  {
    "currentValue": "1.0.0",
    "datasource": "nuget",
    "depName": "Microsoft.VisualStudio.Web.CodeGeneration.Tools",
    "depType": "nuget",
  },
  {
    "currentValue": "1.2.3",
    "datasource": "nuget",
    "depName": "Range3",
    "depType": "nuget",
  },
  {
    "currentValue": "1.2.3",
    "datasource": "nuget",
    "depName": "Range2",
    "depType": "nuget",
  },
  {
    "currentValue": "1.2.3",
    "datasource": "nuget",
    "depName": "Range1",
    "depType": "nuget",
  },
  {
    "currentValue": "3.1.0.5",
    "datasource": "nuget",
    "depName": "Stateless",
    "depType": "nuget",
  },
  {
    "currentValue": "2.1.0",
    "datasource": "nuget",
    "depName": "Serilog.Sinks.Literate",
    "depType": "nuget",
  },
  {
    "currentValue": "1.4.0",
    "datasource": "nuget",
    "depName": "Serilog.Extensions.Logging",
    "depType": "nuget",
  },
  {
    "currentValue": "2.4.0",
    "datasource": "nuget",
    "depName": "Serilog",
    "depType": "nuget",
  },
  {
    "currentValue": "10.0.2",
    "datasource": "nuget",
    "depName": "Newtonsoft.Json",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.2",
    "datasource": "nuget",
    "depName": "Microsoft.Extensions.Logging.Debug",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.2",
    "datasource": "nuget",
    "depName": "Microsoft.Extensions.Configuration.Json",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.2",
    "datasource": "nuget",
    "depName": "Microsoft.AspNetCore.Server.Kestrel",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.3",
    "datasource": "nuget",
    "depName": "Microsoft.AspNetCore.Mvc.Core",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.2",
    "datasource": "nuget",
    "depName": "Microsoft.AspNetCore.Hosting",
    "depType": "nuget",
  },
  {
    "currentValue": "4.1.0",
    "datasource": "nuget",
    "depName": "Autofac.Extensions.DependencyInjection",
    "depType": "nuget",
  },
  {
    "currentValue": "4.5.0",
    "datasource": "nuget",
    "depName": "Autofac",
    "depType": "nuget",
  },
]
`;

exports[`modules/manager/nuget/extract extractPackageFile() extracts all dependencies from global packages file 1`] = `
[
  {
    "currentValue": "1.0.0",
    "datasource": "nuget",
    "depName": "Microsoft.VisualStudio.Web.CodeGeneration.Tools",
    "depType": "nuget",
  },
  {
    "currentValue": "1.2.3",
    "datasource": "nuget",
    "depName": "Range3",
    "depType": "nuget",
  },
  {
    "currentValue": "1.2.3",
    "datasource": "nuget",
    "depName": "Range2",
    "depType": "nuget",
  },
  {
    "currentValue": "1.2.3",
    "datasource": "nuget",
    "depName": "Range1",
    "depType": "nuget",
  },
  {
    "currentValue": "3.1.0.5",
    "datasource": "nuget",
    "depName": "Stateless",
    "depType": "nuget",
  },
  {
    "currentValue": "2.1.0",
    "datasource": "nuget",
    "depName": "Serilog.Sinks.Literate",
    "depType": "nuget",
  },
  {
    "currentValue": "1.4.0",
    "datasource": "nuget",
    "depName": "Serilog.Extensions.Logging",
    "depType": "nuget",
  },
  {
    "currentValue": "2.4.0",
    "datasource": "nuget",
    "depName": "Serilog",
    "depType": "nuget",
  },
  {
    "currentValue": "10.0.2",
    "datasource": "nuget",
    "depName": "Newtonsoft.Json",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.2",
    "datasource": "nuget",
    "depName": "Microsoft.Extensions.Logging.Debug",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.2",
    "datasource": "nuget",
    "depName": "Microsoft.Extensions.Configuration.Json",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.2",
    "datasource": "nuget",
    "depName": "Microsoft.AspNetCore.Server.Kestrel",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.3",
    "datasource": "nuget",
    "depName": "Microsoft.AspNetCore.Mvc.Core",
    "depType": "nuget",
  },
  {
    "currentValue": "1.1.2",
    "datasource": "nuget",
    "depName": "Microsoft.AspNetCore.Hosting",
    "depType": "nuget",
  },
  {
    "currentValue": "4.1.0",
    "datasource": "nuget",
    "depName": "Autofac.Extensions.DependencyInjection",
    "depType": "nuget",
  },
  {
    "currentValue": "4.5.0",
    "datasource": "nuget",
    "depName": "Autofac",
    "depType": "nuget",
  },
  {
    "currentValue": "2.0.0",
    "datasource": "nuget",
    "depName": "Roslynator.Analyzers",
    "depType": "nuget",
  },
]
`;

exports[`modules/manager/nuget/extract extractPackageFile() extracts package version dependency 1`] = `
[
  {
    "currentValue": "4.5.0",
    "datasource": "nuget",
    "depName": "Autofac",
    "depType": "nuget",
  },
]
`;
